# incolumepy.infosaj-cli

./: README.md  pyproject.toml
incolumepy/infosaj_cli/: cli.py
